# fastapi-boilerplate

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
fastapi_boilerplate/: config.py  db.py  dependencies.py  logger.py  main.py  types.py
fastapi_boilerplate/repositories/: find_food_by_id.py  find_foods.py  insert_food.py  remove_food.py  update_food.py
fastapi_boilerplate/routes/: delete_food.py  get_food_by_id.py  get_foods.py  get_nutrients.py  post_food.py  put_food.py
fastapi_boilerplate/services/: fetch_edamam_nutrients.py  fetch_nutritionix_nutrients.py  fetch_spoonacular_nutrients.py
fastapi_boilerplate/utils/: micrograms_to_grams.py  milligrams_to_grams.py  nutrient_to_float.py  nutrient_to_int.py
tests/services/: test_fetch_edamam_nutrients.py  test_fetch_nutritionix_nutrients.py  test_fetch_spoonacular_nutrients.py
tests/utils/: test_micrograms_to_grams.py  test_milligrams_to_grams.py  test_nutrient_to_float.py  test_nutrient_to_int.py
